@@ -1,8 +1,13 @@
+Thu May 17 08:13:25 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * examples/RTCORBA/Activity/Task_Stats.cpp:
+          Fixed conversion warning
+
 Wed May 16 14:05:33 UTC 2012  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
 
         * TAO_IDL/be/be_visitor_component/facet_exh.cpp:
         * TAO_IDL/be/be_visitor_component_scope.cpp:
-        Changed DOxygen documentation.
+          Changed DOxygen documentation.
 
 Wed May 16 06:42:33 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
